5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1811_2563.log
== TEST (2019-06-06 18:24:15) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1)
 soma=0
	for i in media:
		if(5>= pos <7):
			soma=soma+1
			print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
File "XXXX", line 3
    while(size(med)>1)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:24:26) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1):
 soma=0
	for i in media:
		if(5>= pos <7):
			soma=soma+1
			print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
File "XXXX", line 5
    for i in media:
                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:25:05) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1):
soma=0
	for in media:
		if(5>= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
File "XXXX", line 4
    soma=0
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:25:12) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1):
	soma=0
	for in media:
		if(5>= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
File "XXXX", line 5
    for in media:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:25:13) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1):
	soma=0
	for in media:
		if(5>= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
File "XXXX", line 5
    for in media:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:25:30) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1):
	soma=0
	for pos in media:
		if(5>= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:26:44) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1):
	soma=0
	for pos in media:
		if(5>= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:27:29) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1):
	soma=0
	for pos in media:
		if(5>= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:27:35) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1):
	soma=0
	for pos in media:
		if(5>= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 18:27:36) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(med)>1):
	soma=0
	for pos in media:
		if(5>= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- EXECUTION TIME:
0.906094
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2563/main.py", line 3, in <module>
    while(size(med)>1):
NameError: name 'med' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:28:26) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(medidas)>1):
	soma=0
	for pos in media:
		if(5<= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:28:53) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(medidas)>1):
	soma=0
	for pos in media:
		if(5<= pos <7):
			soma=soma+1
		print(soma)
media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:29:30) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(medidas)>1):
	soma=0
	for pos in media:
		if(5<= pos <7):
			soma=soma+1
		print(soma)
	media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:45:14) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in media:
		if(5<= pos <7):
			soma=soma+1
		print(soma)
	media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:45:53) 
-- CODE:
from numpy import *
media=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in media:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:46:31) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in media:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	media=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:47:06) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 18:47:23) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- EXECUTION TIME:
1.84364
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:47:23) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 18:47:24) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- EXECUTION TIME:
2.72015
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6
0
3
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
11
4
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 18:47:28) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- EXECUTION TIME:
5.41242
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
digite o vetor :5
digite a media:3
digite a media:
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 18:47:29) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- EXECUTION TIME:
7.45062
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
5
3
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
digite o vetor :5
digite a media:3
digite a media:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 18:47:29) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- EXECUTION TIME:
8.796
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
5
3
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
digite o vetor :5
digite a media:3
digite a media:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 18:47:29) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- EXECUTION TIME:
10.8335
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
digite o vetor :5
digite a media:3
digite a media:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:01:22) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:01:24) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- EXECUTION TIME:
0.953026
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
digite o vetor :5
digite a media:3
digite a media:
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:02:24) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor :")))
while(size(medias)>1):
	soma=0
	for pos in medias:
		if(5<= pos <7):
			soma=soma+1
	print(soma)
	medias=array(eval(input("digite a media:")))
		
-- EXECUTION TIME:
1.05624
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
